# CrosswordGeneratorCpp

./: CMakeLists.txt  LICENSE  README.md  build.sh
src/: Crosswords.cpp  Crosswords.hpp  InputCheck.cpp  InputCheck.hpp  Logger.cpp  Logger.hpp  Solver.cpp  Solver.hpp  Square.cpp  Square.hpp  main.cpp
table_cfg/: latimes_30nov19.cfg  t_custom.cfg  t_custom2.cfg  t_small.cfg
test/: CMakeLists.txt  Test_InputCheck.cpp
words/: 15748.txt  1968.txt  1969.txt  31496.txt  3937.txt  7874.txt  984.txt  985.txt  custom.txt  custom2.txt  custom3.txt  latimes.txt  small.txt
